--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,164 @@
-template-repository (1.0-1) unstable; urgency=medium
+libsass-python (0.22.0-1) unstable; urgency=medium
 
-  * Initial release
+  * New upstream version 0.22.0
+  * Update patch d/p/pysassc-man.patch
 
- -- Tsic404 <liuheng@deepin.org>  Sat, 28 Jan 2023 13:46:49 +0800
+ -- Frédéric Bonnard <frediz@debian.org>  Wed, 04 Jan 2023 15:18:43 +0100
+
+libsass-python (0.21.0-1) unstable; urgency=medium
+
+  * New upstream version 0.21.0
+  * Update Homepage
+  * Update copyright details
+  * Drop reproducible build patch now applied upstream
+  * Remove workaround for #980628
+  * Update d/watch file
+  * Change libsass man page section
+  * Remove test related file (Closes: #1000943)
+  * Bump Standards-Version
+
+ -- Frédéric Bonnard <frediz@debian.org>  Wed, 20 Apr 2022 16:10:47 +0200
+
+libsass-python (0.20.1-3) unstable; urgency=medium
+
+  * Use pytest instead of unittest to run tests and disable unported
+    tests (Closes: #980628)
+
+ -- Frédéric Bonnard <frediz@debian.org>  Wed, 07 Apr 2021 12:28:16 +0200
+
+libsass-python (0.20.1-2) unstable; urgency=medium
+
+  * Avoid code download during doc build (Closes: #972140)
+  * Make the build reproducible (Closes: #971527)
+
+ -- Frédéric Bonnard <frediz@debian.org>  Fri, 06 Nov 2020 11:23:10 +0100
+
+libsass-python (0.20.1-1) unstable; urgency=low
+
+  [ Debian Janitor ]
+  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
+    Repository-Browse.
+
+  [ Frédéric Bonnard ]
+  * Skip DistUtilsTestCase
+  * Please lintian and deobfuscate use of dh
+  * Link 0.20.1 with newer libsass 3.6.4
+  * Upgrade debhelper compatibility level
+  * Add manpage for libsass
+  * List unwanted files in binary packages
+
+ -- Frédéric Bonnard <frediz@debian.org>  Tue, 08 Sep 2020 14:44:31 +0200
+
+libsass-python (0.19.4-0.1) unstable; urgency=medium
+
+  * Non-maintainer upload
+  * New upstream release (Closes: #952759)
+  * Link 0.19.4 with newer libsass 3.6.3
+  * Bump Standards-Version to 4.5.0 (no change)
+  * Add debian/gbp.conf to reflect the DEP-14 repository layout
+
+ -- Anthony Fok <foka@debian.org>  Mon, 09 Mar 2020 00:31:31 -0600
+
+libsass-python (0.18.0-1) unstable; urgency=medium
+
+  * New upstream release
+  * Link 0.18.0 with newer libsass 3.5.5
+  * Fix python3 dependency
+  * Replace debian/compat with debhelper-compat dependency
+  * Add Rules-Requires-Root field
+
+ -- Frédéric Bonnard <frediz@debian.org>  Tue, 21 Jan 2020 15:45:22 +0100
+
+libsass-python (0.17.0-1.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Drop python2 support; Closes: #936914
+
+ -- Sandro Tosi <morph@debian.org>  Sat, 16 Nov 2019 19:43:31 -0500
+
+libsass-python (0.17.0-1) unstable; urgency=medium
+
+  [ Ondřej Nový ]
+  * Use 'python3 -m sphinx' instead of sphinx-build for building docs
+
+  [ Frédéric Bonnard ]
+  * New upstream version 0.17.0
+  * Rediff patches
+  * Add upstream changelog
+  * Bump Standards-Version
+  * Upgrade compat level
+
+ -- Frédéric Bonnard <frediz@debian.org>  Fri, 11 Jan 2019 12:28:55 +0100
+
+libsass-python (0.14.5-2) unstable; urgency=medium
+
+  * Revert support of custom import extensions (Closes: #906379)
+
+ -- Frédéric Bonnard <frediz@debian.org>  Mon, 27 Aug 2018 13:43:16 +0200
+
+libsass-python (0.14.5-1) unstable; urgency=medium
+
+  * New upstream release (Closes: #903195)
+  * Clean patches up
+  * Use python3 for doc
+  * Build depend on libsass 3.5.4
+  * Use python3 by default
+  * Update Vcs infos
+  * Remove python version fields
+  * Handle nocheck option of DEB_BUILD_OPTIONS
+  * Use https for the homepage
+  * Update copyright information
+  * Bump Standards-Version
+  * Upgrade debhelper compatibility level
+
+ -- Frédéric Bonnard <frediz@debian.org>  Tue, 10 Jul 2018 13:44:40 +0200
+
+libsass-python (0.13.4-1) unstable; urgency=medium
+
+  * New upstream release
+  * d/control : update maintainer's mail
+  * d/p/fix-compilation.patch d/rules : use upstream handling of compilation
+    with system's libsass
+  * d/p/pysassc-man.patch : refresh
+  * d/rules : remove sassc renaming to pysassc as upstream deal with it now
+  * d/changelog : bump Standards-Version
+
+ -- Frédéric Bonnard <frediz@debian.org>  Wed, 13 Dec 2017 09:38:52 +0000
+
+libsass-python (0.12.3-2) unstable; urgency=medium
+
+  * d/control : fixed accents in my name to match d/changelog
+  * d/control : checked and upgraded Standards-Version to 3.9.8
+  * d/rules : enabled hardening to fix hardening-no-bindnow lintian but
+    hardening-no-fortify-functions lintian remains as a false positive
+
+ -- Frédéric Bonnard <frediz@linux.vnet.ibm.com>  Thu, 19 Jan 2017 14:43:24 +0000
+
+libsass-python (0.12.3-1) unstable; urgency=medium
+
+  * New upstream release. Closes: #848653
+
+ -- Frédéric Bonnard <frediz@linux.vnet.ibm.com>  Mon, 09 Jan 2017 15:39:12 +0000
+
+libsass-python (0.11.0-2) unstable; urgency=medium
+
+  * debian/rules : setting PYTHON_EGG_CACHE else build tries to extract
+    eggs in /sbuild-nonexistent.
+
+ -- Frederic Bonnard <frediz@linux.vnet.ibm.com>  Fri, 25 Mar 2016 22:00:32 +0100
+
+libsass-python (0.11.0-1) unstable; urgency=medium
+
+  * debian/rules : taking default python version into account in shebang and
+    adapting upstream check of libsass version.
+  * debian/control : updated python3-libsass dependency. Closes: #811406
+  * Renaming sassc to pysassc while waiting for upstream. Closes: #817139
+  * Updating to new release. Closes: #814428
+
+ -- Frederic Bonnard <frediz@linux.vnet.ibm.com>  Thu, 24 Mar 2016 10:26:12 +0100
+
+libsass-python (0.9.3-1) unstable; urgency=medium
+
+  * Initial release. Closes: #804135
+
+ -- Frederic Bonnard <frediz@linux.vnet.ibm.com>  Fri, 04 Dec 2015 14:39:34 +0100
